# drugEmbedding

./: .gitignore  .project  README.md  RelevantPapers.md  checkpoint_epoch100.modelembeddings_output.pickle  data  environment.yml  externalResources.md  pointers to medications.docx  pyproject.toml  setup.py
DrugEmbedding/: README.md  VampPrior.py  atc_drug_distance.py  decode.py  drugdata.py  evae.py  hvae.py  lorentz.py  main.py  metrics.py  plots.py  run_pipeline.sh  utils.py
DrugEmbedding/analysis/: Deepchem_SIDER.ipynb  KDD_Paper_Writting.ipynb  README.md  effect_geometry.xlsx  repoDB_test_knn_outputs_soft.csv
DrugEmbedding/analysis/TensoboardX/: experiment_lookup.xlsx
DrugEmbedding/data/fda_drugs/: ATC_LOOKUP.csv  atc_examplars.txt  atc_fda_all.csv  atc_fda_unique.csv  char_set_clean.pkl
DrugEmbedding/data/repoDB/: all_drugs_approval_year.csv  repoDB.xlsx
DrugEmbedding/notebooks/: PDBbind.ipynb  Reconstruction_Accuracy.ipynb  RepoDB_Experiment.ipynb  SIDER.ipynb  Tox21.ipynb
MolEmbedding/: Model Comparison.ipynb  MolEmbedding Evaluation.ipynb  README.md  clustering.py  evaluation.py  lorentz_model.py  main.py  model.py  preprocessing.py  run_evaluation.sh  run_pipeline.sh  textdata.py  utils.py
MolEmbedding/data/: all_drugs_only.smi
MolEmbedding/experiments/exp_a_8/: running_configs.cfg  smiles_test.smi  smiles_valid.smi
code/: branching_diffusion.py  evaluation.py  lorentz_model.py  main.py  model.py  run_pipeline.sh  textdata.py  utils.py
drugs/: adverse.py  sider.py
notebooks/: ChemEmbedding_Experiments.ipynb  Course_2.ipynb  SMILE Embeddings Visualization.ipynb  VAE Bookkeeping.ipynb  drug_experimentation.ipynb  drug_experimentation_json.ipynb  drug_label_analysis.ipynb  drug_label_preprocessing.ipynb  drug_label_rx.ipynb  drug_labels.h5  drugs_comparison_v2.ipynb  sider_init_analysis.ipynb  sider_similarity.ipynb  user_guide
sider/: README
test_data/: .gitignore  README.md
(+145 files in other folders)
