[tool.poetry]
name = "drugEmbedding"
description = "Semi-Supervised Hierarchical Drug Embedding in Hyperbolic Space"
license = "Apache 2.0"
repository = "https://github.com/batmanlab/drugEmbedding"
authors = ["batmanlab"]
packages = [{include = "DrugEmbedding"}]
version = "0.0.1"

[build-system]
requires = ["poetry-core>=1.0.4"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.dependencies]
python = ">=3.9"
torch = ">1"
tensorboardX = ">2"
pandas = ">1"
scipy = ">1"
tqdm = ">4"
absl-py = ">1"
